--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -28,10 +28,10 @@
   url = "publication/"
   weight = 40
 
-[[main]]
-  name = "Teaching"
-  url = "courses/"
-  weight = 50
+#[[main]]
+#  name = "Teaching"
+#  url = "courses/"
+#  weight = 50
 
 [[main]]
   name = "Contact"
